@@ -3016,7 +3016,7 @@ summary(DF.Dates)
 ## 2 of 4  summary(.) above did not show NA's  in R <= 3.2.3
 
 
-## Printing complex matrix 
+## Printing complex matrix
 matrix(1i,2,13)
 ## Spacing was wrong in R <= 3.2.4
 
@@ -3024,3 +3024,15 @@ matrix(1i,2,13)
 E <- expression(poly = x^3 - 3 * x^2)
 str(E)
 ## no longer shows "structure(...., .Names = ..)"
+
+
+## summary(<logical>) working via table():
+logi <- c(NA, logical(3), NA, !logical(2), NA)
+summary(logi)
+summary(logi[!is.na(logi)])
+summary(TRUE)
+## was always showing counts for NA's even when 0 in  2.8.0 <= R <= 3.3.1
+ii <- as.integer(logi)
+summary(ii)
+summary(ii[!is.na(ii)])
+summary(1L)
